added about page and made skeleton for group view

--- a/CalendarApplication/CalendarApplication/Views/Shared/_Layout.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Shared/_Layout.cshtml
@@ -59,6 +59,11 @@
         <tr style="height:80px">
             <th colspan="2">
                 <b>Stengade calendar application</b>
+                <br />
+                <noscript>
+                Please note that many functions on this website require JavaScript and your browser does not support it.
+                You will need a JavaScript-enabled browser to use this site.
+                </noscript>
             </th>
         </tr>
         <tr style="height:30px">
