--- a/CalendarApplication/CalendarApplication/Views/Calendar/List.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Calendar/List.cshtml
@@ -97,7 +97,7 @@
                     @foreach (BasicEvent e in Model.Events)
                     {
                         <tr>
-                            <td>@Html.ActionLink(e.Name, "Index", "Event", new { id = e.ID }, null)</td>
+                            <td>@Html.ActionLink(e.Name, "Index", "Event", new { eventId = e.ID }, null)</td>
                             <td>@e.TypeName</td>
                             <td>@Html.ActionLink(e.Creator, "Index", "User", new { userId = e.CreatorId }, null)</td>
                             <td>@e.Start</td>
