--- a/CalendarApplication/CalendarApplication/Views/User/Index.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/User/Index.cshtml
@@ -61,7 +61,7 @@ else {
                     @for (int i = 0; i < Model.Events.Count; i++)
                     {
                         <tr>
-                            <td style="background-color:@(Model.Events[i].getColor())">@Html.ActionLink(Model.Events[i].Name, "Index", "Event", new { id = Model.Events[i].ID }, null)
+                            <td style="background-color:@(Model.Events[i].getColor())">@Html.ActionLink(Model.Events[i].Name, "Index", "Event", new { eventId = Model.Events[i].ID }, null)
                         </tr>
                     }
                 </table>
