added basic functionality to the print event button on event view page. paths to files still based on local system.

--- a/CalendarApplication/CalendarApplication/Views/Event/Index.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Event/Index.cshtml
@@ -121,4 +121,17 @@ else {
     {
         @Html.ActionLink("Edit event", "EditEvent", "Event", new { id = Model.ID, year = 0, month = 0, day = 0 }, null)
     }
+
+    <script>
+        function printEvent(id) {
+            $.ajax({
+                url: "/Event/PrintEvent",
+                type: 'POST',
+                data: { id: id },
+                success: function (result) { window.open(result); }
+            });
+        }
+    </script>
+    
+    <button onclick="printEvent(@(Model.ID))">Print Event</button>
 }
