--- a/CalendarApplication/CalendarApplication/Views/Shared/_Layout.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Shared/_Layout.cshtml
@@ -22,17 +22,11 @@
 </head>
 
 <body>
+    <noscript class="no-script-error">
+        Please note that many functions on this website require JavaScript and your browser does not support it.
+        You will need a JavaScript-enabled browser to use this site.
+    </noscript>
     <table class="layout-style-basic">
-  <!--      <tr style="height:80px">
-            <th colspan="2">
-                <b>Stengade calendar application</b>
-                <br />
-                <noscript>
-                Please note that many functions on this website require JavaScript and your browser does not support it.
-                You will need a JavaScript-enabled browser to use this site.
-                </noscript>
-            </th>
-        </tr>-->
         <tr class="account-header">
             <th>
                 @Html.Partial("_LoginPartial")
